--- a/src/app/components/shared/stream-video/stream-video.component.html
+++ b/src/app/components/shared/stream-video/stream-video.component.html
@@ -1,11 +1,13 @@
 <div class="video-container">
 
     <video #videoElement class="w-100"></video>
-    <div class="comment-container">
+    <div *ngIf="_streamManager" class="comment-container">
         <div class="comment-list">
             <div class="comment-item" *ngFor="let comment of listComment">
-                <div class="d-flex align-items-center">
-                    <img src="assets/images/avatar.png" alt="" />
+                <div class="d-flex align-items-center mt-2">
+                    <img width="25" height="25" src="{{ comment?.userAvatar }}"
+                        onerror="this.onerror=null;this.src='/assets/no_user.png';" alt=""
+                        class="rounded-circle ms-2" />
                     <div class="ms-2">
                         <h6 class="mb-0">{{ comment?.userName }}</h6>
                         <p class="mb-0">{{ comment?.content }}</p>
@@ -13,9 +15,10 @@
                 </div>
             </div>
         </div>
-        <div class="comment-input mt-2">
+        <div *ngIf="!isPublisher" class="comment-input mt-2">
             <input type="text" class="form-control" placeholder="Enter your comment" [(ngModel)]="commentContent"
                 (keyup.enter)="onComment()" />
         </div>
+
     </div>
 </div>
