--- a/src/app/components/shared/stream-video/stream-video.component.scss
+++ b/src/app/components/shared/stream-video/stream-video.component.scss
@@ -10,14 +10,18 @@
         position: absolute;
         bottom: 0.25rem;
         padding: 1rem;
+        max-height: 40%;
+        scrollbar-width: 0px;
+        overflow: auto;
+        .comment-item {
+            // max-height: 80%;
+        }
         .comment-input {
             input {
                 width: 100%;
                 border-radius: 20px;
                 font-size: 1rem;
                 padding: 0.5rem 1rem;
-                &:focus {
-                }
             }
         }
     }
