fix: fix bug live

--- a/src/app/components/merchant-pages/live/live.component.html
+++ b/src/app/components/merchant-pages/live/live.component.html
@@ -3,14 +3,13 @@
         <div class="card">
 
             <div class="w-100 d-flex flex-wrap">
-                <div class="col-12 " [ngClass]="{'xl:col-6': !isOnLive, 'xl:col-8' : isOnLive}">
+                <div *ngIf="isLiveSuccess" class="col-12 xl:col-8">
                     <app-stream-video #streamVideo [streamManager]="mainStreamManager"
                         [session]="session"></app-stream-video>
 
-                    <button pButton pRipple label="Start Live Stream" class="p-button-success mr-2"
-                        (click)=" publishStream()"></button>
+
                 </div>
-                <div *ngIf="!isOnLive" class="col-12 xl:col-6">
+                <div *ngIf="!isLiveSuccess" class="col-12">
                     <h5>
                         Select Product for Live
                     </h5>
@@ -29,9 +28,10 @@
 
                         </div>
                     </div>
+
                 </div>
-                <div *ngIf="isOnLive" class="col-12 xl:col-4">
-                    <div *ngFor="let item of  listProductForLive" class="mb-2">
+                <div *ngIf="isLiveSuccess" class="col-12 xl:col-4">
+                    <div *ngFor="let item of  listProductForLive; index as i" class="mb-2">
                         <div class="item-name d-flex justify-content-between align-items-center gap-4">
                             <img width="60px" [src]="item?.image || item?.images[0]" alt="" />
                             <div class="flex-grow-1">
@@ -42,14 +42,20 @@
                                     {{ item?.totalItemPrice || item?.price | currency : "VND" }}
                                 </p>
                             </div>
-                            <div>
-                                <i class="bi bi-pin-angle cursor-pointer"></i>
+                            <div (click)="selectedProduct = item; indexSelectedProduct = i">
+                                <i *ngIf="item.isPinned" class="bi bi-pin-angle-fill cursor-pointer" pTooltip="Unpin"
+                                    (click)="item.isPinned = false"></i>
+                                <p-menu #menu [model]="items" [popup]="true" appendTo="body"></p-menu>
+
+                                <i *ngIf="!item.isPinned" class="bi bi-three-dots cursor-pointer"
+                                    (click)="menu.toggle($event)"></i>
                             </div>
                         </div>
                     </div>
                 </div>
 
-
+                <button pButton pRipple [label]="isLiveSuccess ? 'Shutdown live' :'Start Live Stream'"
+                    class="p-button-success mr-2" (click)="isLiveSuccess ? shutDownLive() : publishStream()"></button>
             </div>
         </div>
     </div>
