--- a/src/app/components/shared/stream-video/stream-video.component.html
+++ b/src/app/components/shared/stream-video/stream-video.component.html
@@ -2,22 +2,24 @@
 
     <video #videoElement class="w-100"></video>
     <div *ngIf="_streamManager" class="comment-container">
-        <div class="comment-list">
-            <div class="comment-item" *ngFor="let comment of listComment">
-                <div class="d-flex align-items-center mt-2">
-                    <img width="25" height="25" src="{{ comment?.userAvatar }}"
-                        onerror="this.onerror=null;this.src='/assets/no_user.png';" alt=""
-                        class="rounded-circle ms-2" />
-                    <div class="ms-2">
-                        <h6 class="mb-0">{{ comment?.userName }}</h6>
-                        <p class="mb-0">{{ comment?.content }}</p>
+        <div class="position-relative comment">
+            <div id="comments" class="comment-list">
+                <div class="comment-item" *ngFor="let comment of listComment">
+                    <div class="d-flex align-items-center mt-2">
+                        <img width="25" height="25" src="{{ comment?.userAvatar }}"
+                            onerror="this.onerror=null;this.src='/assets/no_user.png';" alt=""
+                            class="rounded-circle ms-2" />
+                        <div class="ms-2">
+                            <h6 class="mb-0 text-white">{{ comment?.userName }}</h6>
+                            <p class="mb-0 text-white">{{ comment?.content }}</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div *ngIf="!isPublisher" class="comment-input mt-2">
-            <input type="text" class="form-control" placeholder="Enter your comment" [(ngModel)]="commentContent"
-                (keyup.enter)="onComment()" />
+            <div *ngIf="!isPublisher" class="comment-input mt-2">
+                <input type="text" class="form-control" placeholder="Enter your comment" [(ngModel)]="commentContent"
+                    (keyup.enter)="onComment()" />
+            </div>
         </div>
 
     </div>
