--- a/src/app/components/user-pages/live-detail/live-detail.component.html
+++ b/src/app/components/user-pages/live-detail/live-detail.component.html
@@ -45,6 +45,7 @@
                             </div>
                         </div>
                     </div>
+                    <!-- <button (click)="turnOffLive()">Turn off live</button> -->
                 </div>
                 <div *ngIf="isSelectVariety && selectedProduct">
                     <div class="item-name d-flex justify-content-between align-items-center gap-4">
